--- a/practise/pom.xml
+++ b/practise/pom.xml
@@ -32,6 +32,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.63.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
